Fix paginator not align to results node bottom issue
Fix paginator not align to results node bottom issue

--- a/Code/FoodPortal/WebRoot/css/dataSearchComp.css
+++ b/Code/FoodPortal/WebRoot/css/dataSearchComp.css
@@ -28,6 +28,18 @@
     margin: 0;
 }
 
+.resultsItemDiv {
+	border: 1px solid #DDDDDD;
+    border-radius: 4px 4px 4px 4px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+    display: block;    
+    padding: 8px;
+    transition: all 0.2s ease-in-out 0s;
+    align: center;
+    width: 90%;
+    heigth: 300px;
+}
+
 /*
 #demo .results ul {
     margin: 0;
@@ -52,13 +64,9 @@
 #demo .results li:hover {
     z-index: 10;
 }
-*/
+
 #demo .results li:hover img {
     position: absolute;
-    /*
-    left: -5px;
-    top: -5px;
-    */
     opacity: 1;
     width: 260px;
     height: 260px;
@@ -68,6 +76,7 @@
     -moz-box-shadow: 3px 3px 5px hsla(250, 40%, 30%, 0.5);
     box-shadow: 3px 3px 5px hsla(250, 40%, 30%, 0.5);
 }
+*/
 
 /** LOADING INDICATOR **/
 #demo.loading .loading {
